--- a/templates/output.html
+++ b/templates/output.html
@@ -36,7 +36,7 @@
 
     {% endif %}
     <a  style="margin-top: 20px;"
-    href="{{url_for('predict_disease')}}"
+    href="{{url_for('predictor')}}"
     
     ><button style="
       background-color: #e33838;
