--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Navigation Bar</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <div>Navbar</div>
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <!-- Navigation Links -->
+        <a href="{{ url_for('home') }}">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+
+        <!-- Login and Signup Buttons -->
+        <a href="#login" class="loginbutton">Login</a>
+        <a href="#signup" class="signupbutton" style="color: white;">Sign Up</a>
+    </div>
 </body>
 </html>
